# hsl-infotaulu

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yml
src/: dates.rs  hsl.rs  main.rs  templating.rs  worker.rs  ws.rs
static/: index.css  index.html  index.js
templates/: index.html
